--- a/src/components/ui/LanguageSwitcher.astro
+++ b/src/components/ui/LanguageSwitcher.astro
@@ -1,5 +1,5 @@
 ---
-import { languages } from "@i18n/ui";
+import { languages } from "@i18n/translations";
 import { getLangFromUrl, useTranslatedPath } from "@i18n/utils";
 
 const lang = getLangFromUrl(Astro.url);
