--- a/src/pages/fr/about.astro
+++ b/src/pages/fr/about.astro
@@ -8,7 +8,7 @@ import { getLangFromUrl, useTranslations } from "@i18n/utils";
 
 const title = "À propos | Ryan PINA-SILASSE";
 const description =
-  "Software Engineer de 25 ans basé à Drummondville, Québec. 5 ans d'expérience en développement web. Actuellement chez Midbec, à la recherche d'opportunités à Toronto. Spécialisé en React et Go.";
+  "Ingénieur Logiciel basé à Drummondville, Québec. 5 ans d'expérience en développement web. Actuellement chez Midbec, à la recherche d'opportunités à Toronto. Spécialisé en React et Go.";
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
