--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,7 +8,7 @@ import { getLangFromUrl, useTranslations } from "@i18n/utils";
 
 const title = "About | Ryan PINA-SILASSE";
 const description =
-  "25-year-old Software Engineer based in Drummondville, Quebec. 5 years of experience in web development. Currently working at Midbec. Specialized in React, Go, and full stack architecture.";
+  "Software Engineer based in Drummondville, Quebec. 5 years of experience in web development. Currently working at Midbec. Specialized in React, Go, and full stack architecture.";
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
