--- a/src/pages/fr/experience.astro
+++ b/src/pages/fr/experience.astro
@@ -6,7 +6,8 @@ import { experiences } from "@data/experience";
 import { getLangFromUrl, useTranslations } from "@i18n/utils";
 
 const title = "Expérience | Ryan PINA-SILASSE";
-const description = "Plus de 5 ans d'expérience professionnelle comme Software Engineer et Développeur Full Stack au Canada et en France. Actuellement chez Midbec (Québec), anciennement chez Konbini et French Innov.";
+const description =
+  "Plus de 5 ans d'expérience professionnelle comme Ingénieur Logiciel et Développeur Full Stack au Canada et en France. Actuellement chez Midbec (Québec).";
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
