--- a/src/pages/fr/skills.astro
+++ b/src/pages/fr/skills.astro
@@ -7,7 +7,7 @@ import { skillsDetails } from "@/data/skillDetails";
 
 const title = "Compétences | Ryan PINA-SILASSE";
 const description =
-  "Développeur full stack maîtrisant React, Go, Next.js, TypeScript, Node.js, Python et les technologies web modernes. Expérience en développement mobile, plateformes cloud et outils DevOps.";
+  "Ingénieur Logiciel maîtrisant React, Go, Next.js, TypeScript, Node.js, Python et les technologies web modernes. Expérience en développement mobile, plateformes cloud et outils DevOps.";
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 
